--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/shopper/shopper-query" routerLinkActive="active">Query Items <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/shopper/select-item" routerLinkActive="active">Query Items <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Virtual Cart</a>
@@ -15,4 +15,6 @@
     </ul>
   </div>
 </nav>
-
+<div class="container-fluid">
+  <router-outlet></router-outlet>
+</div>
