finish first page

--- a/src/app/shopper/select-item/select-item.component.scss
+++ b/src/app/shopper/select-item/select-item.component.scss
@@ -1,4 +1,14 @@
 .app-pick-store-container {
-    max-height: 300px;
+    max-height: 20%;
     overflow-y: auto;
 }
+
+.app-select-product-container {
+    max-height: 40%;
+    overflow-y: auto;
+}
+
+.new-section {
+    margin-top: 30px; 
+}
+
