--- a/src/app/shopper/select-item/select-item.component.html
+++ b/src/app/shopper/select-item/select-item.component.html
@@ -12,4 +12,14 @@
       </div>
     </div>
   </div>
+  <div class="col-12 new-section">
+      <h3>2. Select a product</h3>
+  </div>
+  <div class="col-12 app-select-product-container">
+    <div class="row">
+      <div class="col-12">
+        <app-select-product *ngFor="let product of productList" [productName]="product.name"></app-select-product>
+      </div>
+    </div>
+  </div>
 </div>
