finish association-result

--- a/src/app/shopper/associaltion-result/associaltion-result.component.html
+++ b/src/app/shopper/associaltion-result/associaltion-result.component.html
@@ -13,3 +13,8 @@
           </p>
     </div>
 </div>
+<div class="row action-panel">
+    <div class="col">
+        <button mat-stroked-button>Add to your virtual cart!</button>
+    </div>
+</div>
