--- a/src/app/shopper/select-item/select-item.component.html
+++ b/src/app/shopper/select-item/select-item.component.html
@@ -18,7 +18,7 @@
   <div class="col-12 app-select-product-container">
     <div class="row">
       <div class="col-12">
-        <app-select-product *ngFor="let product of productList" [productName]="product.name"></app-select-product>
+        <app-select-product *ngFor="let product of productList" [productName]="product.name" (click)="onClickProduct(product)"></app-select-product>
       </div>
     </div>
   </div>
