--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
         <a class="nav-link" routerLink="/shopper/select-item" routerLinkActive="active">Query Items <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+          <a class="nav-link" routerLink="store/upload-file" routerLinkActive="active">Upload File</a>
+        </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Virtual Cart</a>
       </li>
     </ul>
