finish store-association-result

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
           <a class="nav-link" routerLink="store/upload-file" routerLinkActive="active">Upload File</a>
         </li>
       <li class="nav-item">
+          <a class="nav-link" routerLink="store/store-association-result" routerLinkActive="active">Query Items for Store</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Virtual Cart</a>
       </li>
     </ul>
