--- a/src/app/store/store-association-result/store-association-result.component.html
+++ b/src/app/store/store-association-result/store-association-result.component.html
@@ -1,4 +1,9 @@
 <div class="row">
+    <div class="col-12">
+        <h1>The list of associated products at SafeWay</h1>
+    </div>
+</div>
+<div class="row">
   <div class="col-12">
       <mat-form-field fxFlex="40%">
          <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
@@ -6,29 +11,23 @@
   </div>
   <div class="col-12">
           <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 col-12">
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-          
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.itemName}} </td>
             </ng-container>
           
-            <ng-container matColumnDef="weight">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <ng-container matColumnDef="associatedItems">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Associated Items </th>
+              <td mat-cell *matCellDef="let element"> {{element.associatedItemNames}} </td>
             </ng-container>
           
-            <ng-container matColumnDef="symbol">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <ng-container matColumnDef="levelOfConfidence">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Level Of Confidence </th>
+              <td mat-cell *matCellDef="let element"> {{element.levelOfConfidence}} </td>
             </ng-container>
-          
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
-          <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[10, 15]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
