--- a/src/app/shopper/select-item/select-item.component.html
+++ b/src/app/shopper/select-item/select-item.component.html
@@ -8,7 +8,7 @@
   <div class="app-pick-store-container col-12">
     <div class="row">
       <div class="col-12">
-          <app-pick-store-item *ngFor="let store of storeList" [storeName]="store.storeName" [storeDescription]="store.storeDescription"></app-pick-store-item>
+          <app-pick-store-item *ngFor="let store of storeList" [storeName]="store.name" [storeDescription]="store.description"></app-pick-store-item>
       </div>
     </div>
   </div>
