--- a/src/app/store/store-association-result/store-association-result.component.html
+++ b/src/app/store/store-association-result/store-association-result.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12">
-        <h1>The list of associated products at SafeWay</h1>
+        <h1>The list of associated products at {{storeName}} Store</h1>
     </div>
 </div>
 <div class="row">
