finish coloring btn

--- a/src/app/shopper/select-item/pick-store/pick-store-item/pick-store-item.component.html
+++ b/src/app/shopper/select-item/pick-store/pick-store-item/pick-store-item.component.html
@@ -1,4 +1,4 @@
 <mat-card>
-  <mat-card-title>{{storeName}}</mat-card-title>
+  <mat-card-title><i class="fas fa-store"></i><div>{{storeName}}</div></mat-card-title>
   <mat-card-content>{{storeDescription}}</mat-card-content>
 </mat-card>
