--- a/src/app/shopper/select-item/pick-store/pick-store-item/pick-store-item.component.scss
+++ b/src/app/shopper/select-item/pick-store/pick-store-item/pick-store-item.component.scss
@@ -3,3 +3,17 @@
     margin-left: 10px;
     margin-top: 10px;
 }
+
+mat-card-title {
+    text-align: center;
+}
+
+:host.active { 
+    & mat-card-title {
+        color: #b00017;
+    }
+   
+    & mat-card-content {
+        color: #b00017;
+    }
+}
