--- a/src/app/shopper/associaltion-result/associaltion-result.component.scss
+++ b/src/app/shopper/associaltion-result/associaltion-result.component.scss
@@ -8,3 +8,25 @@
         text-align: center;
     }
 }
+
+.name {
+    font-size: 1.2rem !important;
+}
+
+.confidence {
+    font-size: 0.8rem !important;
+    color: #888585 !important;
+}
+
+mat-list-option {
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
+  
+    height: max-content !important;
+    background-color: #f5f4f4;
+}
+
+.mat-list-item-content {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
+}
