--- a/src/app/shopper/associaltion-result/associaltion-result.component.scss
+++ b/src/app/shopper/associaltion-result/associaltion-result.component.scss
@@ -30,3 +30,18 @@ mat-list-option {
     padding-top: 10px !important;
     padding-bottom: 10px !important;
 }
+
+.mat-selection-list, .action-panel {
+    margin-top: 3%;
+}
+
+.option-selected {
+    text-align: right;
+}
+
+.action-panel {
+    & button {
+        font-size: 1.1rem;
+    }
+}
+
