--- a/src/app/shopper/select-item/select-item.component.html
+++ b/src/app/shopper/select-item/select-item.component.html
@@ -19,10 +19,15 @@
   <div class="col-12 new-section">
       <h3>2. Select a product</h3>
   </div>
+  <div class="col-12">
+      <mat-form-field fxFlex="40%">
+          <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+       </mat-form-field>
+  </div>
   <div class="col-12 app-select-product-container">
     <div class="row">
       <div class="col-12">
-        <app-select-product *ngFor="let product of productList" [productName]="product.name" (click)="onClickProduct(product)"></app-select-product>
+        <app-select-product *ngFor="let product of productList | myfilter:filterValue" [productName]="product.name" (click)="onClickProduct(product)"></app-select-product>
       </div>
     </div>
   </div>
