--- a/src/app/store/upload-file/upload-file.component.html
+++ b/src/app/store/upload-file/upload-file.component.html
@@ -6,10 +6,21 @@
       <h3>1. Please upload a transactional file with a specific format</h3>
     </div>
     <div class="col-12">
-        <label class="btn btn-default">
-            <input type="file" (change)="selectFile($event)">
-          </label>
-           
-          <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
+        <div class="table">
+            <div class="table-cell">
+              <div class="container">
+                <div id="profile" (click)="onClickSelectFile()">
+                  <div class="dashes"></div>
+                  <label>Click to browse</label>
+                </div>
+                <div class="editable">
+                  <h1 class="customize">{{getFileName()}}</h1>
+                </div>
+                
+                <button (click)="upload()">Upload</button>
+              </div>
+            </div>
+          </div>
+          <input type="file" #mediaFile id="mediaFile" (change)="selectFile($event)" />
     </div>
 </div>
