done for upload-file-component

--- a/src/app/store/upload-file/upload-file.component.html
+++ b/src/app/store/upload-file/upload-file.component.html
@@ -1,11 +1,12 @@
 <div class="row">
     <div class="col-12">
-      <h1>Welcome Store 'SafeWay' to sMart!</h1>
+      <h1>Welcome Store '{{storeInformationService.storeName}}' to sMart!</h1>
     </div>
     <div class="col-12">
       <h3>1. Please upload a transactional file with a specific format</h3>
     </div>
     <div class="col-12">
+        <div><h5>Store ID: <input [(ngModel)]="storeIDInput" /></h5></div>
         <div class="table">
             <div class="table-cell">
               <div class="container">
