--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">sMART</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#"><h2>sMART</h2></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -10,10 +11,10 @@
         <a class="nav-link" routerLink="/shopper/select-item" routerLinkActive="active">Query Items <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="store/upload-file" routerLinkActive="active">Upload File</a>
-        </li>
+        <a class="nav-link" routerLink="store/upload-file" routerLinkActive="active">Upload File</a>
+      </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="store/store-association-result" routerLinkActive="active">Query Items for Store</a>
+        <a class="nav-link" routerLink="store/store-association-result" routerLinkActive="active">Query Items for Store</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Virtual Cart</a>
@@ -22,5 +23,24 @@
   </div>
 </nav>
 <div class="container-fluid">
-  <router-outlet></router-outlet>
+  <div class="row">
+    <div class="col-2 left-menu-container">
+      <div class="row">
+        <div class="col left-menu">
+          <div class="col-12 menu-item">
+            <i class="fas fa-home"></i> Home
+          </div>
+          <div class="col-12 menu-item">
+            <i class="fas fa-football-ball"></i> Explore Products
+          </div>
+          <div class="col-12 menu-item">
+            <i class="fas fa-shopping-cart"></i> My virtual cart
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-10 content-container">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
