--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,34 @@
 nav {
-    background-color: #a21d22 !important;
+    background-color: white !important;
+
+    & .navbar-brand>h2 {
+        font-weight: 900;
+    }
+}
+
+
+.navbar-dark .navbar-brand, .navbar-dark .navbar-nav .nav-link {
+    color: #a21d22;
 }
 
 .container-fluid {
-    padding-top: 5%;
-    padding-left: 50px;
-    padding-right: 50px;
+    & .left-menu-container {
+        display: flex;
+        height: 95%;
+        border-right: 3px solid #00000021;
+        & .left-menu {
+            align-self: flex-start;
+            justify-content: center;
+            & .menu-item {
+                margin-top: 30%;
+                margin-bottom: 30%;
+            }
+        }
+    }
+
+    & .content-container {
+        padding-left: 50px;
+        padding-top: 30px;
+    }
 }
+
