--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,8 +20,15 @@ nav {
             align-self: flex-start;
             justify-content: center;
             & .menu-item {
-                margin-top: 30%;
-                margin-bottom: 30%;
+                margin-top: 50px;
+                margin-bottom: 50px;
+                cursor: pointer;
+
+               
+            }
+
+            & .active {
+                border-left: 3px solid red;
             }
         }
     }
