--- a/src/app/pre-login/login/login.component.scss
+++ b/src/app/pre-login/login/login.component.scss
@@ -97,6 +97,7 @@
   
   /*---------------------------------------------*/
   button {
+      cursor: pointer !important;
       outline: none !important;
       border: none;
       background: transparent;
