--- a/src/app/pre-login/login/login.component.scss
+++ b/src/app/pre-login/login/login.component.scss
@@ -16,6 +16,11 @@
   body, html {
       height: 100%;
   }
+
+  .type {
+      color: #666666 !important;
+      font-size: 14px !important;
+  }
   
   /*---------------------------------------------*/
   a {
