--- a/src/app/pre-login/login/login.component.html
+++ b/src/app/pre-login/login/login.component.html
@@ -1,47 +1,64 @@
 <div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-				<div class="login100-form validate-form">
-					<span class="login100-form-title p-b-26">
-						 Welcome to
+  <div class="container-login100">
+    <div class="wrap-login100">
+      <div class="login100-form validate-form">
+        <span class="login100-form-title p-b-26">
+          Welcome to
+        </span>
+        <span class="login100-form-title p-b-26 logo">
+          sMart 
+        </span>
+        <span class="login100-form-title p-b-26 type">
+          ({{mode}})
+        </span>
+        <span class="login100-form-title p-b-48">
+          <i class="zmdi zmdi-font"></i>
+        </span>
+
+        <div class="wrap-input100 validate-input">
+          <input class="input100" type="text" name="email" [(ngModel)]="id" placeholder="{{idDescription}}">
+        </div>
+
+        <div class="wrap-input100 validate-input">
+          <span class="btn-show-pass">
+            <i class="zmdi zmdi-eye"></i>
           </span>
-          <span class="login100-form-title p-b-26 logo">
-              sMart
-           </span>
-					<span class="login100-form-title p-b-48">
-						<i class="zmdi zmdi-font"></i>
-					</span>
-
-					<div class="wrap-input100 validate-input">
-						<input class="input100" type="text" name="email" [(ngModel)]="id" placeholder="{{idDescription}}">
-					</div>
-
-					<div class="wrap-input100 validate-input">
-						<span class="btn-show-pass">
-							<i class="zmdi zmdi-eye"></i>
-						</span>
-						<input class="input100" type="password" name="pass" [(ngModel)]="password">
-						<span class="focus-input100" data-placeholder="Password"></span>
+          <input class="input100" type="password" name="pass" [(ngModel)]="password">
+          <span class="focus-input100" data-placeholder="Password"></span>
+        </div>
+        <div class="container-login100-form-btn">
+          <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button class="login100-form-btn" (click)="onClickLogin()">
+              Login
+            </button>
           </div>
-					<div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn" (click)="onClickLogin()">
-								Login
-							</button>
-						</div>
-					</div>
+        </div>
 
-					<div class="text-center p-t-115">
-						<span class="txt1">
-							Don’t have an account?
-						</span>
-
-						<a class="txt2" href="#">
-							Sign Up
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+        <div class="text-center p-t-115">
+          <span class="txt1">
+            Don’t have an account?
+          </span>
+          <p>
+            <a class="txt2" routerLink="/pre-login/sign-up-shopper">
+              Sign Up as Shopper
+            </a>
+          </p>
+          <p>
+            <a class="txt2" routerLink="/pre-login/sign-up">
+              Sign Up as Store
+            </a>
+          </p>
+        </div>
+        <div class="text-center p-t-10">
+            <span class="txt1">
+              Not {{mode}}?
+            </span>
+            <a class="txt2" href="{{getOppositeURL()}}">
+              Log in as {{oppositeMode}}
+            </a>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
