--- a/src/app/pre-login/sign-up/sign-up.component.html
+++ b/src/app/pre-login/sign-up/sign-up.component.html
@@ -37,7 +37,7 @@
           <button mat-raised-button color="accent" (click)="onClickSignUp()">Sign Up</button>
         </div>
         <div class="col-6" style="text-align:left">
-            <button mat-raised-button>Cancel</button>
+            <button mat-raised-button (click)="onClickCancel()">Cancel</button>
           </div>
       </div>
     </div>
