--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -1,1 +1,8 @@
 <svg width="1000" height="1000"></svg>
+<div class="container">
+    <div class="row align-items-center welcome-container">
+        <div class="col-12">
+            <h1 class="logo">Welcome to sMart</h1>
+            </div>
+        </div>
+    </div>
