--- a/src/app/store/store-association-result/store-association-result.component.html
+++ b/src/app/store/store-association-result/store-association-result.component.html
@@ -22,7 +22,7 @@
             </ng-container>
           
             <ng-container matColumnDef="levelOfConfidence">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Level Of Confidence </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Level Of Support </th>
               <td mat-cell *matCellDef="let element"> {{element.levelOfConfidence}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
