--- a/src/app/after-login/after-login/after-login.component.html
+++ b/src/app/after-login/after-login/after-login.component.html
@@ -16,7 +16,7 @@
           <div class="col-12 menu-item" [hidden]="!isShopper()" routerLink="/after-login/shopper/select-item" routerLinkActive="active">
             <i class="fas fa-football-ball"></i> Explore Products
           </div>
-          <div class="col-12 menu-item"  [hidden]="!isShopper()">
+          <div class="col-12 menu-item"  [hidden]="!isShopper()" routerLink="/after-login/shopper/virtual-cart" routerLinkActive="active">
             <i class="fas fa-shopping-cart"></i> My virtual cart
           </div>
           <div class="col-12 menu-item"  [hidden]="!isStore()" routerLink="/after-login/store/upload-file" routerLinkActive="active">
