--- a/src/app/shopper/virtual-cart/virtual-cart.component.html
+++ b/src/app/shopper/virtual-cart/virtual-cart.component.html
@@ -1,3 +1,15 @@
-<p>
-  virtual-cart works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <h3>Basket</h3>
+  </div>
+</div>
+<div class="row table">
+  <div class="col-12 header">
+    <div class="row">
+      <div class="col-4">Item(s)</div>
+      <div class="col-3">Store</div>
+      <div class="col-3">With Product</div>
+      <div class="col-2">Remove</div>
+    </div>
+  </div>
+</div>
