fetch virtual cart

--- a/src/app/shopper/virtual-cart/virtual-cart.component.html
+++ b/src/app/shopper/virtual-cart/virtual-cart.component.html
@@ -12,4 +12,12 @@
       <div class="col-2">Remove</div>
     </div>
   </div>
+  <div class="col-12 data" *ngFor="let item of items">
+      <div class="row">
+        <div class="col-4">{{item.productName}}</div>
+        <div class="col-3">{{item.storeName}}</div>
+        <div class="col-3">With Product</div>
+        <div class="col-2">Remove</div>
+      </div>
+    </div>
 </div>
