--- a/src/app/shopper/virtual-cart/virtual-cart.component.scss
+++ b/src/app/shopper/virtual-cart/virtual-cart.component.scss
@@ -1,8 +1,14 @@
 .header {
+    
     border-bottom: 1px solid #c3c3c3;
 }
 
 .table {
     margin-top: 20px;
-    padding-right: 20px;
+    padding: 15px;
+}
+
+.data {
+    padding: 15px;
+    border-bottom: 1px solid #f1eeee;
 }
