--- a/src/app/shopper/virtual-cart/virtual-cart.component.html
+++ b/src/app/shopper/virtual-cart/virtual-cart.component.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-4">{{item.productName}}</div>
         <div class="col-3">{{item.storeName}}</div>
-        <div class="col-3">With Product</div>
+        <div class="col-3">{{item.buyWithProductName}}</div>
         <div class="col-2">Remove</div>
       </div>
     </div>
