--- a/src/app/shopper/virtual-cart/virtual-cart.component.html
+++ b/src/app/shopper/virtual-cart/virtual-cart.component.html
@@ -12,6 +12,8 @@
       <div class="col-2">Remove</div>
     </div>
   </div>
+</div>
+<div class="row table-row">
   <div class="col-12 data" *ngFor="let item of items">
       <div class="row">
         <div class="col-4">{{item.productName}}</div>
