--- a/src/app/shopper/virtual-cart/virtual-cart.component.scss
+++ b/src/app/shopper/virtual-cart/virtual-cart.component.scss
@@ -6,9 +6,16 @@
 .table {
     margin-top: 20px;
     padding: 15px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
 }
 
 .data {
     padding: 15px;
     border-bottom: 1px solid #f1eeee;
+}
+
+.table-row {
+    max-height: 70%;
+    overflow-y: auto;
 }
