add select product panel

--- a/src/app/after-login/after-login/after-login.component.html
+++ b/src/app/after-login/after-login/after-login.component.html
@@ -25,6 +25,9 @@
           <div class="col-12 menu-item"  [hidden]="!isStore()"  routerLink="/after-login/store/store-association-result" routerLinkActive="active">
             <i class="fas fa-search-dollar"></i> Query Items
           </div>
+          <div class="col-12 menu-item"  [hidden]="!isStore()"  routerLink="/after-login/store/store-popular" routerLinkActive="active">
+            <i class="fas fa-search-dollar"></i> Product Trends
+          </div>
         </div>
       </div>
     </div>
