--- a/src/app/store/popular-product/popular-product.component.html
+++ b/src/app/store/popular-product/popular-product.component.html
@@ -18,8 +18,8 @@
       </div>
     </div>
   </div>
-  <div class="col-8">
-
+  <div class="col-8 chart">
+      <canvas #myChart width="100" height="100"></canvas>
   </div>
 
 </div>
