add from to calendar

--- a/src/app/store/popular-product/popular-product.component.html
+++ b/src/app/store/popular-product/popular-product.component.html
@@ -6,11 +6,11 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-12">
-            <mat-form-field fxFlex="40%">
-                <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
-             </mat-form-field>
-        </div>
+      <div class="col-12">
+        <mat-form-field fxFlex="40%">
+          <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+      </div>
     </div>
     <div class="row product-panel">
       <div class="col-12" *ngFor="let p of productList | myfilter:filterValue">
@@ -19,7 +19,33 @@
     </div>
   </div>
   <div class="col-8 chart">
-      <canvas #myChart width="100" height="100"></canvas>
+    <div class="row">
+      <div class="col-6">
+        From:
+        <span>
+          <mat-form-field>
+            <input matInput [matDatepicker]="fromDatepicker">
+            <mat-datepicker-toggle matSuffix [for]="fromDatepicker"></mat-datepicker-toggle>
+            <mat-datepicker #fromDatepicker></mat-datepicker>
+          </mat-form-field>
+        </span>
+      </div>
+      <div class="col-6">
+        To:
+        <span>
+          <mat-form-field>
+            <input matInput [matDatepicker]="toDatepicker">
+            <mat-datepicker-toggle matSuffix [for]="toDatepicker"></mat-datepicker-toggle>
+            <mat-datepicker #toDatepicker></mat-datepicker>
+          </mat-form-field>
+        </span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <canvas #myChart width="100" height="100"></canvas>
+      </div>
+    </div>
   </div>
 
 </div>
