--- a/src/app/after-login/after-login/after-login.component.html
+++ b/src/app/after-login/after-login/after-login.component.html
@@ -23,7 +23,7 @@
             <i class="fas fa-upload"></i> Upload File
           </div>
           <div class="col-12 menu-item"  [hidden]="!isStore()"  routerLink="/after-login/store/store-association-result" routerLinkActive="active">
-            <i class="fas fa-search-dollar"></i> Query Items
+            <i class="fas fa-search-dollar"></i> Associated Products
           </div>
           <div class="col-12 menu-item"  [hidden]="!isStore()"  routerLink="/after-login/store/store-popular" routerLinkActive="active">
             <i class="fas fa-search-dollar"></i> Product Trends
