--- a/src/app/pre-login/login/login.component.scss
+++ b/src/app/pre-login/login/login.component.scss
@@ -64,6 +64,9 @@
       list-style-type: none;
   }
   
+  .help-block {
+    color: red;
+  }
   
   /*---------------------------------------------*/
   input {
